tp_connection_upgrade_contacts_async: fall back to old API if no Contacts

Previously it would just crash with an assertion failure, because
contacts_bind_to_signals() relies on the Contacts interface.

Also test that case in contacts-slow-path.c.

Signed-off-by: Simon McVittie <simon.mcvittie@collabora.co.uk>
Reviewed-by: Guillaume Desmottes <guillaume.desmottes@collabora.co.uk>
Bug: https://bugs.freedesktop.org/show_bug.cgi?id=49735